fix(table): change thead to sticky position with z-index
This change makes `thead` stick to the top of the table container and ensures the elements in `thead` are visible as the table body is scrolled.

--- a/packages/components/src/components/data-table/_data-table-core.scss
+++ b/packages/components/src/components/data-table/_data-table-core.scss
@@ -467,7 +467,8 @@
     }
 
     thead {
-      position: fixed;
+      position: sticky;
+      z-index: 1;
       top: 0;
       width: 100%;
       overflow: scroll;
